# IPM

./: .gitignore  AGENT_GROUP_RUNBOOK.md  NEXT_PHASE_ITERATION_PLAN.md  PHASE1_EXECUTION_BACKLOG.md  PHASE1_SMOKE_CHECKLIST.md  PRODUCT_DEFINITION.md  README.md  UNIFIED_TECHNICAL_BLUEPRINT.md  启动资源工作台Demo.bat  启动资源工作台桌面版.bat
docs/: KNOWN_ISSUES.md  QUICK_START.md  RELEASE_NOTES_v0.1-beta.md
release-assets/: README.md
resource-workbench-app/: .gitignore  README.md  package-lock.json  package.json
resource-workbench-app/src-tauri/: Cargo.toml  tauri.conf.json
resource-workbench-app/src-tauri/src/: main.rs
resource-workbench-app/ui/: index.html
resource-workbench-demo/: launch_demo.py  sample-import.md  script.broken.backup.js  script.js  styles.css
tools/: build_portable_release.ps1  build_release_graphics.py
